samples/_failures_safe/1761226957_059e14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7264bb9.c: In function ‘main’:
./samples/SAFE/__tmp_d7264bb9.c:147:5: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  147 |     size
      |     ^~~~
      |     size_t
./samples/SAFE/__tmp_d7264bb9.c:147:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d7264bb9.c:147:9: error: expected ‘;’ at end of input
  147 |     size
      |         ^
      |         ;
./samples/SAFE/__tmp_d7264bb9.c:147:5: error: expected declaration or statement at end of input
  147 |     size
      |     ^~~~
